// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuditCycleForm/> renders an empty form correctly 1`] = `
<div
  className="modal"
  style={
    Object {
      "display": "block",
      "overflow": "scroll",
    }
  }
  tabIndex="-1"
>
  <div
    className="modal-backdrop fade in"
    onClick={[Function]}
    style={
      Object {
        "height": "100%",
        "zIndex": "1060",
      }
    }
  />
  <div
    className="modal-dialog "
    style={
      Object {
        "zIndex": "1070",
      }
    }
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          className="close"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
        <h4
          className="modal-title"
        >
          Add Audit Cycle
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "85vh",
            "overflowY": "scroll",
          }
        }
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="row"
          >
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Audit Cycle Name
                </label>
                <input
                  className="form-control"
                  label="Audit Cycle Name"
                  name="name"
                  onChange={[Function]}
                  type="text"
                  value=""
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Questionnaire Type
                </label>
                <select
                  className="form-control"
                  label="Questionnaire Type"
                  name="questionnaire_type"
                  onChange={[Function]}
                  value=""
                >
                  <option
                    value=""
                  />
                  ;
                </select>
                <ul />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Start Date
                   
                </label>
                <div
                  className="rdt"
                >
                  <input
                    className="form-control"
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="text"
                    value=""
                  />
                  <div
                    className="rdtPicker"
                  >
                    <div
                      className="rdtDays"
                    >
                      <table>
                        <thead>
                          <tr>
                            <th
                              className="rdtPrev"
                              onClick={[Function]}
                            >
                              <span>
                                ‹
                              </span>
                            </th>
                            <th
                              className="rdtSwitch"
                              colSpan={5}
                              data-value={3}
                              onClick={[Function]}
                            >
                              April 2018
                            </th>
                            <th
                              className="rdtNext"
                              onClick={[Function]}
                            >
                              <span>
                                ›
                              </span>
                            </th>
                          </tr>
                          <tr>
                            <th
                              className="dow"
                            >
                              Su
                            </th>
                            <th
                              className="dow"
                            >
                              Mo
                            </th>
                            <th
                              className="dow"
                            >
                              Tu
                            </th>
                            <th
                              className="dow"
                            >
                              We
                            </th>
                            <th
                              className="dow"
                            >
                              Th
                            </th>
                            <th
                              className="dow"
                            >
                              Fr
                            </th>
                            <th
                              className="dow"
                            >
                              Sa
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              className="rdtDay rdtOld"
                              data-value={25}
                              onClick={[Function]}
                            >
                              25
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={26}
                              onClick={[Function]}
                            >
                              26
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={27}
                              onClick={[Function]}
                            >
                              27
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={28}
                              onClick={[Function]}
                            >
                              28
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={29}
                              onClick={[Function]}
                            >
                              29
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={30}
                              onClick={[Function]}
                            >
                              30
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={31}
                              onClick={[Function]}
                            >
                              31
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={1}
                              onClick={[Function]}
                            >
                              1
                            </td>
                            <td
                              className="rdtDay"
                              data-value={2}
                              onClick={[Function]}
                            >
                              2
                            </td>
                            <td
                              className="rdtDay"
                              data-value={3}
                              onClick={[Function]}
                            >
                              3
                            </td>
                            <td
                              className="rdtDay"
                              data-value={4}
                              onClick={[Function]}
                            >
                              4
                            </td>
                            <td
                              className="rdtDay"
                              data-value={5}
                              onClick={[Function]}
                            >
                              5
                            </td>
                            <td
                              className="rdtDay"
                              data-value={6}
                              onClick={[Function]}
                            >
                              6
                            </td>
                            <td
                              className="rdtDay"
                              data-value={7}
                              onClick={[Function]}
                            >
                              7
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={8}
                              onClick={[Function]}
                            >
                              8
                            </td>
                            <td
                              className="rdtDay"
                              data-value={9}
                              onClick={[Function]}
                            >
                              9
                            </td>
                            <td
                              className="rdtDay"
                              data-value={10}
                              onClick={[Function]}
                            >
                              10
                            </td>
                            <td
                              className="rdtDay"
                              data-value={11}
                              onClick={[Function]}
                            >
                              11
                            </td>
                            <td
                              className="rdtDay"
                              data-value={12}
                              onClick={[Function]}
                            >
                              12
                            </td>
                            <td
                              className="rdtDay"
                              data-value={13}
                              onClick={[Function]}
                            >
                              13
                            </td>
                            <td
                              className="rdtDay"
                              data-value={14}
                              onClick={[Function]}
                            >
                              14
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={15}
                              onClick={[Function]}
                            >
                              15
                            </td>
                            <td
                              className="rdtDay"
                              data-value={16}
                              onClick={[Function]}
                            >
                              16
                            </td>
                            <td
                              className="rdtDay"
                              data-value={17}
                              onClick={[Function]}
                            >
                              17
                            </td>
                            <td
                              className="rdtDay"
                              data-value={18}
                              onClick={[Function]}
                            >
                              18
                            </td>
                            <td
                              className="rdtDay"
                              data-value={19}
                              onClick={[Function]}
                            >
                              19
                            </td>
                            <td
                              className="rdtDay"
                              data-value={20}
                              onClick={[Function]}
                            >
                              20
                            </td>
                            <td
                              className="rdtDay"
                              data-value={21}
                              onClick={[Function]}
                            >
                              21
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={22}
                              onClick={[Function]}
                            >
                              22
                            </td>
                            <td
                              className="rdtDay"
                              data-value={23}
                              onClick={[Function]}
                            >
                              23
                            </td>
                            <td
                              className="rdtDay"
                              data-value={24}
                              onClick={[Function]}
                            >
                              24
                            </td>
                            <td
                              className="rdtDay"
                              data-value={25}
                              onClick={[Function]}
                            >
                              25
                            </td>
                            <td
                              className="rdtDay"
                              data-value={26}
                              onClick={[Function]}
                            >
                              26
                            </td>
                            <td
                              className="rdtDay"
                              data-value={27}
                              onClick={[Function]}
                            >
                              27
                            </td>
                            <td
                              className="rdtDay rdtToday"
                              data-value={28}
                              onClick={[Function]}
                            >
                              28
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={29}
                              onClick={[Function]}
                            >
                              29
                            </td>
                            <td
                              className="rdtDay"
                              data-value={30}
                              onClick={[Function]}
                            >
                              30
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={1}
                              onClick={[Function]}
                            >
                              1
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={2}
                              onClick={[Function]}
                            >
                              2
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={3}
                              onClick={[Function]}
                            >
                              3
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={4}
                              onClick={[Function]}
                            >
                              4
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={5}
                              onClick={[Function]}
                            >
                              5
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul />
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  End Date
                   
                </label>
                <div
                  className="rdt"
                >
                  <input
                    className="form-control"
                    disabled={true}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="text"
                    value=""
                  />
                  <div
                    className="rdtPicker"
                  >
                    <div
                      className="rdtDays"
                    >
                      <table>
                        <thead>
                          <tr>
                            <th
                              className="rdtPrev"
                              onClick={[Function]}
                            >
                              <span>
                                ‹
                              </span>
                            </th>
                            <th
                              className="rdtSwitch"
                              colSpan={5}
                              data-value={3}
                              onClick={[Function]}
                            >
                              April 2018
                            </th>
                            <th
                              className="rdtNext"
                              onClick={[Function]}
                            >
                              <span>
                                ›
                              </span>
                            </th>
                          </tr>
                          <tr>
                            <th
                              className="dow"
                            >
                              Su
                            </th>
                            <th
                              className="dow"
                            >
                              Mo
                            </th>
                            <th
                              className="dow"
                            >
                              Tu
                            </th>
                            <th
                              className="dow"
                            >
                              We
                            </th>
                            <th
                              className="dow"
                            >
                              Th
                            </th>
                            <th
                              className="dow"
                            >
                              Fr
                            </th>
                            <th
                              className="dow"
                            >
                              Sa
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              className="rdtDay rdtOld"
                              data-value={25}
                              onClick={[Function]}
                            >
                              25
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={26}
                              onClick={[Function]}
                            >
                              26
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={27}
                              onClick={[Function]}
                            >
                              27
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={28}
                              onClick={[Function]}
                            >
                              28
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={29}
                              onClick={[Function]}
                            >
                              29
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={30}
                              onClick={[Function]}
                            >
                              30
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={31}
                              onClick={[Function]}
                            >
                              31
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={1}
                              onClick={[Function]}
                            >
                              1
                            </td>
                            <td
                              className="rdtDay"
                              data-value={2}
                              onClick={[Function]}
                            >
                              2
                            </td>
                            <td
                              className="rdtDay"
                              data-value={3}
                              onClick={[Function]}
                            >
                              3
                            </td>
                            <td
                              className="rdtDay"
                              data-value={4}
                              onClick={[Function]}
                            >
                              4
                            </td>
                            <td
                              className="rdtDay"
                              data-value={5}
                              onClick={[Function]}
                            >
                              5
                            </td>
                            <td
                              className="rdtDay"
                              data-value={6}
                              onClick={[Function]}
                            >
                              6
                            </td>
                            <td
                              className="rdtDay"
                              data-value={7}
                              onClick={[Function]}
                            >
                              7
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={8}
                              onClick={[Function]}
                            >
                              8
                            </td>
                            <td
                              className="rdtDay"
                              data-value={9}
                              onClick={[Function]}
                            >
                              9
                            </td>
                            <td
                              className="rdtDay"
                              data-value={10}
                              onClick={[Function]}
                            >
                              10
                            </td>
                            <td
                              className="rdtDay"
                              data-value={11}
                              onClick={[Function]}
                            >
                              11
                            </td>
                            <td
                              className="rdtDay"
                              data-value={12}
                              onClick={[Function]}
                            >
                              12
                            </td>
                            <td
                              className="rdtDay"
                              data-value={13}
                              onClick={[Function]}
                            >
                              13
                            </td>
                            <td
                              className="rdtDay"
                              data-value={14}
                              onClick={[Function]}
                            >
                              14
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={15}
                              onClick={[Function]}
                            >
                              15
                            </td>
                            <td
                              className="rdtDay"
                              data-value={16}
                              onClick={[Function]}
                            >
                              16
                            </td>
                            <td
                              className="rdtDay"
                              data-value={17}
                              onClick={[Function]}
                            >
                              17
                            </td>
                            <td
                              className="rdtDay"
                              data-value={18}
                              onClick={[Function]}
                            >
                              18
                            </td>
                            <td
                              className="rdtDay"
                              data-value={19}
                              onClick={[Function]}
                            >
                              19
                            </td>
                            <td
                              className="rdtDay"
                              data-value={20}
                              onClick={[Function]}
                            >
                              20
                            </td>
                            <td
                              className="rdtDay"
                              data-value={21}
                              onClick={[Function]}
                            >
                              21
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={22}
                              onClick={[Function]}
                            >
                              22
                            </td>
                            <td
                              className="rdtDay"
                              data-value={23}
                              onClick={[Function]}
                            >
                              23
                            </td>
                            <td
                              className="rdtDay"
                              data-value={24}
                              onClick={[Function]}
                            >
                              24
                            </td>
                            <td
                              className="rdtDay"
                              data-value={25}
                              onClick={[Function]}
                            >
                              25
                            </td>
                            <td
                              className="rdtDay"
                              data-value={26}
                              onClick={[Function]}
                            >
                              26
                            </td>
                            <td
                              className="rdtDay"
                              data-value={27}
                              onClick={[Function]}
                            >
                              27
                            </td>
                            <td
                              className="rdtDay rdtToday"
                              data-value={28}
                              onClick={[Function]}
                            >
                              28
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={29}
                              onClick={[Function]}
                            >
                              29
                            </td>
                            <td
                              className="rdtDay"
                              data-value={30}
                              onClick={[Function]}
                            >
                              30
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={1}
                              onClick={[Function]}
                            >
                              1
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={2}
                              onClick={[Function]}
                            >
                              2
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={3}
                              onClick={[Function]}
                            >
                              3
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={4}
                              onClick={[Function]}
                            >
                              4
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={5}
                              onClick={[Function]}
                            >
                              5
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Audit Type
                </label>
                <select
                  className="form-control"
                  label="Audit Type"
                  name="type"
                  onChange={[Function]}
                  value=""
                >
                  <option
                    value=""
                  />
                  <option
                    value="WALKIN"
                  >
                    Walk In
                  </option>
                  <option
                    value="PHONE"
                  >
                    Phone
                  </option>
                  <option
                    value="WEB"
                  >
                    Web
                  </option>
                  <option
                    value="SERVICE"
                  >
                    Service
                  </option>
                  <option
                    value="AT_HOME"
                  >
                    At Home
                  </option>
                </select>
                <ul />
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Audit Status
                </label>
                <select
                  className="form-control"
                  label="Audit Status"
                  name="status"
                  onChange={[Function]}
                  value=""
                >
                  <option
                    value=""
                  />
                  <option
                    value="PREPARATION"
                  >
                    Preparation
                  </option>
                  <option
                    value="UPCOMING"
                  >
                    Upcoming
                  </option>
                  <option
                    value="ACTIVE"
                  >
                    Active
                  </option>
                  <option
                    value="REPORT"
                  >
                    Report
                  </option>
                  <option
                    value="CLEARING"
                  >
                    Clearing
                  </option>
                  <option
                    value="ARCHIVED"
                  >
                    Archived
                  </option>
                </select>
                <ul />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Earnings Per Audit (₹)
                </label>
                <input
                  className="form-control"
                  label="Earnings Per Audit (₹)"
                  name="earnings_per_audit"
                  onChange={[Function]}
                  type="number"
                  value=""
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Reimbursement upto (₹)
                </label>
                <input
                  className="form-control"
                  label="Reimbursement upto (₹)"
                  name="reimbursement"
                  onChange={[Function]}
                  type="number"
                  value=""
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Planned audit
                </label>
                <input
                  className="form-control"
                  label="Planned audit"
                  name="planned_audit"
                  onChange={[Function]}
                  type="number"
                  value=""
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Audit Fail Duration (In Days)
                </label>
                <input
                  className="form-control"
                  label="Audit Fail Duration (In Days)"
                  name="audit_auto_fail"
                  onChange={[Function]}
                  type="number"
                  value=""
                />
                <ul />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col-md-3"
            >
              <div
                className="form-group"
              >
                <label>
                  Audit auto approve
                </label>
                <input
                  className="form-control"
                  label="Audit auto approve"
                  name="audit_auto_approve"
                  onChange={[Function]}
                  type="checkbox"
                  value=""
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-3"
            >
              <div
                className="form-group"
              >
                <label>
                  Audit Report Summary
                </label>
                <input
                  checked={true}
                  className="form-control"
                  label="Audit Report Summary"
                  name="audit_report_summary"
                  onChange={[Function]}
                  type="checkbox"
                  value=""
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-3"
            >
              <div
                className="form-group"
              >
                <label>
                  Enable AI for auto filling
                </label>
                <input
                  className="form-control"
                  label="Enable AI for auto filling"
                  name="audit_ai_autofill"
                  onChange={[Function]}
                  type="checkbox"
                  value=""
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-3"
            >
              <div
                className="form-group"
              >
                <label>
                  Enable QA-AI Comparison
                </label>
                <input
                  className="form-control"
                  label="Enable QA-AI Comparison"
                  name="qa_ai_comparison"
                  onChange={[Function]}
                  type="checkbox"
                  value=""
                />
                <ul />
              </div>
            </div>
          </div>
          <div
            className="form-group"
          >
            <label>
              Auditor Notes (0/50) (Max 50 characters)
            </label>
            <textarea
              className="form-control"
              name="auditor_notes"
              onChange={[Function]}
              value=""
            />
            <ul />
          </div>
          <div
            className="form-group"
          >
            <label>
              Description (markdown)
            </label>
            <textarea
              className="form-control"
              name="description"
              onChange={[Function]}
              value=""
            />
            <ul />
          </div>
          <div>
            <label>
              Preview:
            </label>
            <div
              className="text-center text-muted"
            >
              <img
                alt="loading..."
                src="test-file-stub"
                title="Please Wait"
              />
              <p>
                LOADING
              </p>
            </div>
          </div>
          <button
            className="btn btn-primary"
            type="submit"
          >
            Save
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AuditCycleForm/> renders the loaded values correctly 1`] = `
<div
  className="modal"
  style={
    Object {
      "display": "block",
      "overflow": "scroll",
    }
  }
  tabIndex="-1"
>
  <div
    className="modal-backdrop fade in"
    onClick={[Function]}
    style={
      Object {
        "height": "100%",
        "zIndex": "1060",
      }
    }
  />
  <div
    className="modal-dialog "
    style={
      Object {
        "zIndex": "1070",
      }
    }
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          className="close"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
        <h4
          className="modal-title"
        >
          Edit Audit Cycle
        </h4>
      </div>
      <div
        className="modal-body"
        style={
          Object {
            "maxHeight": "85vh",
            "overflowY": "scroll",
          }
        }
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="row"
          >
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Audit Cycle Name
                </label>
                <input
                  className="form-control"
                  label="Audit Cycle Name"
                  name="name"
                  onChange={[Function]}
                  type="text"
                  value="Pilot December 2017"
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Questionnaire Type
                </label>
                <select
                  className="form-control"
                  label="Questionnaire Type"
                  name="questionnaire_type"
                  onChange={[Function]}
                  value={18}
                >
                  <option
                    value=""
                  />
                  ;
                </select>
                <ul />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Start Date
                   
                </label>
                <div
                  className="rdt"
                >
                  <input
                    className="form-control"
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="text"
                    value="2017-12-19"
                  />
                  <div
                    className="rdtPicker"
                  >
                    <div
                      className="rdtDays"
                    >
                      <table>
                        <thead>
                          <tr>
                            <th
                              className="rdtPrev"
                              onClick={[Function]}
                            >
                              <span>
                                ‹
                              </span>
                            </th>
                            <th
                              className="rdtSwitch"
                              colSpan={5}
                              data-value={11}
                              onClick={[Function]}
                            >
                              December 2017
                            </th>
                            <th
                              className="rdtNext"
                              onClick={[Function]}
                            >
                              <span>
                                ›
                              </span>
                            </th>
                          </tr>
                          <tr>
                            <th
                              className="dow"
                            >
                              Su
                            </th>
                            <th
                              className="dow"
                            >
                              Mo
                            </th>
                            <th
                              className="dow"
                            >
                              Tu
                            </th>
                            <th
                              className="dow"
                            >
                              We
                            </th>
                            <th
                              className="dow"
                            >
                              Th
                            </th>
                            <th
                              className="dow"
                            >
                              Fr
                            </th>
                            <th
                              className="dow"
                            >
                              Sa
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              className="rdtDay rdtOld"
                              data-value={26}
                              onClick={[Function]}
                            >
                              26
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={27}
                              onClick={[Function]}
                            >
                              27
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={28}
                              onClick={[Function]}
                            >
                              28
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={29}
                              onClick={[Function]}
                            >
                              29
                            </td>
                            <td
                              className="rdtDay rdtOld"
                              data-value={30}
                              onClick={[Function]}
                            >
                              30
                            </td>
                            <td
                              className="rdtDay"
                              data-value={1}
                              onClick={[Function]}
                            >
                              1
                            </td>
                            <td
                              className="rdtDay"
                              data-value={2}
                              onClick={[Function]}
                            >
                              2
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={3}
                              onClick={[Function]}
                            >
                              3
                            </td>
                            <td
                              className="rdtDay"
                              data-value={4}
                              onClick={[Function]}
                            >
                              4
                            </td>
                            <td
                              className="rdtDay"
                              data-value={5}
                              onClick={[Function]}
                            >
                              5
                            </td>
                            <td
                              className="rdtDay"
                              data-value={6}
                              onClick={[Function]}
                            >
                              6
                            </td>
                            <td
                              className="rdtDay"
                              data-value={7}
                              onClick={[Function]}
                            >
                              7
                            </td>
                            <td
                              className="rdtDay"
                              data-value={8}
                              onClick={[Function]}
                            >
                              8
                            </td>
                            <td
                              className="rdtDay"
                              data-value={9}
                              onClick={[Function]}
                            >
                              9
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={10}
                              onClick={[Function]}
                            >
                              10
                            </td>
                            <td
                              className="rdtDay"
                              data-value={11}
                              onClick={[Function]}
                            >
                              11
                            </td>
                            <td
                              className="rdtDay"
                              data-value={12}
                              onClick={[Function]}
                            >
                              12
                            </td>
                            <td
                              className="rdtDay"
                              data-value={13}
                              onClick={[Function]}
                            >
                              13
                            </td>
                            <td
                              className="rdtDay"
                              data-value={14}
                              onClick={[Function]}
                            >
                              14
                            </td>
                            <td
                              className="rdtDay"
                              data-value={15}
                              onClick={[Function]}
                            >
                              15
                            </td>
                            <td
                              className="rdtDay"
                              data-value={16}
                              onClick={[Function]}
                            >
                              16
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={17}
                              onClick={[Function]}
                            >
                              17
                            </td>
                            <td
                              className="rdtDay"
                              data-value={18}
                              onClick={[Function]}
                            >
                              18
                            </td>
                            <td
                              className="rdtDay rdtActive"
                              data-value={19}
                              onClick={[Function]}
                            >
                              19
                            </td>
                            <td
                              className="rdtDay"
                              data-value={20}
                              onClick={[Function]}
                            >
                              20
                            </td>
                            <td
                              className="rdtDay"
                              data-value={21}
                              onClick={[Function]}
                            >
                              21
                            </td>
                            <td
                              className="rdtDay"
                              data-value={22}
                              onClick={[Function]}
                            >
                              22
                            </td>
                            <td
                              className="rdtDay"
                              data-value={23}
                              onClick={[Function]}
                            >
                              23
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={24}
                              onClick={[Function]}
                            >
                              24
                            </td>
                            <td
                              className="rdtDay"
                              data-value={25}
                              onClick={[Function]}
                            >
                              25
                            </td>
                            <td
                              className="rdtDay"
                              data-value={26}
                              onClick={[Function]}
                            >
                              26
                            </td>
                            <td
                              className="rdtDay"
                              data-value={27}
                              onClick={[Function]}
                            >
                              27
                            </td>
                            <td
                              className="rdtDay"
                              data-value={28}
                              onClick={[Function]}
                            >
                              28
                            </td>
                            <td
                              className="rdtDay"
                              data-value={29}
                              onClick={[Function]}
                            >
                              29
                            </td>
                            <td
                              className="rdtDay"
                              data-value={30}
                              onClick={[Function]}
                            >
                              30
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={31}
                              onClick={[Function]}
                            >
                              31
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={1}
                              onClick={[Function]}
                            >
                              1
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={2}
                              onClick={[Function]}
                            >
                              2
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={3}
                              onClick={[Function]}
                            >
                              3
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={4}
                              onClick={[Function]}
                            >
                              4
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={5}
                              onClick={[Function]}
                            >
                              5
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={6}
                              onClick={[Function]}
                            >
                              6
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul />
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  End Date
                   
                </label>
                <div
                  className="rdt"
                >
                  <input
                    className="form-control"
                    disabled={false}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="text"
                    value="2017-12-31"
                  />
                  <div
                    className="rdtPicker"
                  >
                    <div
                      className="rdtDays"
                    >
                      <table>
                        <thead>
                          <tr>
                            <th
                              className="rdtPrev"
                              onClick={[Function]}
                            >
                              <span>
                                ‹
                              </span>
                            </th>
                            <th
                              className="rdtSwitch"
                              colSpan={5}
                              data-value={11}
                              onClick={[Function]}
                            >
                              December 2017
                            </th>
                            <th
                              className="rdtNext"
                              onClick={[Function]}
                            >
                              <span>
                                ›
                              </span>
                            </th>
                          </tr>
                          <tr>
                            <th
                              className="dow"
                            >
                              Su
                            </th>
                            <th
                              className="dow"
                            >
                              Mo
                            </th>
                            <th
                              className="dow"
                            >
                              Tu
                            </th>
                            <th
                              className="dow"
                            >
                              We
                            </th>
                            <th
                              className="dow"
                            >
                              Th
                            </th>
                            <th
                              className="dow"
                            >
                              Fr
                            </th>
                            <th
                              className="dow"
                            >
                              Sa
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              className="rdtDay rdtOld rdtDisabled"
                              data-value={26}
                            >
                              26
                            </td>
                            <td
                              className="rdtDay rdtOld rdtDisabled"
                              data-value={27}
                            >
                              27
                            </td>
                            <td
                              className="rdtDay rdtOld rdtDisabled"
                              data-value={28}
                            >
                              28
                            </td>
                            <td
                              className="rdtDay rdtOld rdtDisabled"
                              data-value={29}
                            >
                              29
                            </td>
                            <td
                              className="rdtDay rdtOld rdtDisabled"
                              data-value={30}
                            >
                              30
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={1}
                            >
                              1
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={2}
                            >
                              2
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={3}
                            >
                              3
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={4}
                            >
                              4
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={5}
                            >
                              5
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={6}
                            >
                              6
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={7}
                            >
                              7
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={8}
                            >
                              8
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={9}
                            >
                              9
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={10}
                            >
                              10
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={11}
                            >
                              11
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={12}
                            >
                              12
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={13}
                            >
                              13
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={14}
                            >
                              14
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={15}
                            >
                              15
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={16}
                            >
                              16
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={17}
                            >
                              17
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={18}
                            >
                              18
                            </td>
                            <td
                              className="rdtDay rdtDisabled"
                              data-value={19}
                            >
                              19
                            </td>
                            <td
                              className="rdtDay"
                              data-value={20}
                              onClick={[Function]}
                            >
                              20
                            </td>
                            <td
                              className="rdtDay"
                              data-value={21}
                              onClick={[Function]}
                            >
                              21
                            </td>
                            <td
                              className="rdtDay"
                              data-value={22}
                              onClick={[Function]}
                            >
                              22
                            </td>
                            <td
                              className="rdtDay"
                              data-value={23}
                              onClick={[Function]}
                            >
                              23
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay"
                              data-value={24}
                              onClick={[Function]}
                            >
                              24
                            </td>
                            <td
                              className="rdtDay"
                              data-value={25}
                              onClick={[Function]}
                            >
                              25
                            </td>
                            <td
                              className="rdtDay"
                              data-value={26}
                              onClick={[Function]}
                            >
                              26
                            </td>
                            <td
                              className="rdtDay"
                              data-value={27}
                              onClick={[Function]}
                            >
                              27
                            </td>
                            <td
                              className="rdtDay"
                              data-value={28}
                              onClick={[Function]}
                            >
                              28
                            </td>
                            <td
                              className="rdtDay"
                              data-value={29}
                              onClick={[Function]}
                            >
                              29
                            </td>
                            <td
                              className="rdtDay"
                              data-value={30}
                              onClick={[Function]}
                            >
                              30
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="rdtDay rdtActive"
                              data-value={31}
                              onClick={[Function]}
                            >
                              31
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={1}
                              onClick={[Function]}
                            >
                              1
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={2}
                              onClick={[Function]}
                            >
                              2
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={3}
                              onClick={[Function]}
                            >
                              3
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={4}
                              onClick={[Function]}
                            >
                              4
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={5}
                              onClick={[Function]}
                            >
                              5
                            </td>
                            <td
                              className="rdtDay rdtNew"
                              data-value={6}
                              onClick={[Function]}
                            >
                              6
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Audit Type
                </label>
                <select
                  className="form-control"
                  label="Audit Type"
                  name="type"
                  onChange={[Function]}
                  value="WALKIN"
                >
                  <option
                    value=""
                  />
                  <option
                    value="WALKIN"
                  >
                    Walk In
                  </option>
                  <option
                    value="PHONE"
                  >
                    Phone
                  </option>
                  <option
                    value="WEB"
                  >
                    Web
                  </option>
                  <option
                    value="SERVICE"
                  >
                    Service
                  </option>
                  <option
                    value="AT_HOME"
                  >
                    At Home
                  </option>
                </select>
                <ul />
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Audit Status
                </label>
                <select
                  className="form-control"
                  label="Audit Status"
                  name="status"
                  onChange={[Function]}
                  value="ARCHIVED"
                >
                  <option
                    value=""
                  />
                  <option
                    value="PREPARATION"
                  >
                    Preparation
                  </option>
                  <option
                    value="UPCOMING"
                  >
                    Upcoming
                  </option>
                  <option
                    value="ACTIVE"
                  >
                    Active
                  </option>
                  <option
                    value="REPORT"
                  >
                    Report
                  </option>
                  <option
                    value="CLEARING"
                  >
                    Clearing
                  </option>
                  <option
                    value="ARCHIVED"
                  >
                    Archived
                  </option>
                </select>
                <ul />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Earnings Per Audit (₹)
                </label>
                <input
                  className="form-control"
                  label="Earnings Per Audit (₹)"
                  name="earnings_per_audit"
                  onChange={[Function]}
                  type="number"
                  value={300}
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Reimbursement upto (₹)
                </label>
                <input
                  className="form-control"
                  label="Reimbursement upto (₹)"
                  name="reimbursement"
                  onChange={[Function]}
                  type="number"
                  value={200}
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Planned audit
                </label>
                <input
                  className="form-control"
                  label="Planned audit"
                  name="planned_audit"
                  onChange={[Function]}
                  type="number"
                  value=""
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-group"
              >
                <label>
                  Audit Fail Duration (In Days)
                </label>
                <input
                  className="form-control"
                  label="Audit Fail Duration (In Days)"
                  name="audit_auto_fail"
                  onChange={[Function]}
                  type="number"
                  value=""
                />
                <ul />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col-md-3"
            >
              <div
                className="form-group"
              >
                <label>
                  Audit auto approve
                </label>
                <input
                  className="form-control"
                  label="Audit auto approve"
                  name="audit_auto_approve"
                  onChange={[Function]}
                  type="checkbox"
                  value=""
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-3"
            >
              <div
                className="form-group"
              >
                <label>
                  Audit Report Summary
                </label>
                <input
                  checked={true}
                  className="form-control"
                  label="Audit Report Summary"
                  name="audit_report_summary"
                  onChange={[Function]}
                  type="checkbox"
                  value=""
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-3"
            >
              <div
                className="form-group"
              >
                <label>
                  Enable AI for auto filling
                </label>
                <input
                  className="form-control"
                  label="Enable AI for auto filling"
                  name="audit_ai_autofill"
                  onChange={[Function]}
                  type="checkbox"
                  value=""
                />
                <ul />
              </div>
            </div>
            <div
              className="col-md-3"
            >
              <div
                className="form-group"
              >
                <label>
                  Enable QA-AI Comparison
                </label>
                <input
                  className="form-control"
                  label="Enable QA-AI Comparison"
                  name="qa_ai_comparison"
                  onChange={[Function]}
                  type="checkbox"
                  value=""
                />
                <ul />
              </div>
            </div>
          </div>
          <div
            className="form-group"
          >
            <label>
              Auditor Notes (0/50) (Max 50 characters)
            </label>
            <textarea
              className="form-control"
              name="auditor_notes"
              onChange={[Function]}
              value=""
            />
            <ul />
          </div>
          <div
            className="form-group"
          >
            <label>
              Description (markdown)
            </label>
            <textarea
              className="form-control"
              name="description"
              onChange={[Function]}
              value="This is a disclosed survey."
            />
            <ul />
          </div>
          <div>
            <label>
              Preview:
            </label>
            <div
              className="text-center text-muted"
            >
              <img
                alt="loading..."
                src="test-file-stub"
                title="Please Wait"
              />
              <p>
                LOADING
              </p>
            </div>
          </div>
          <button
            className="btn btn-primary"
            type="submit"
          >
            Save
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
